# TicketReservationSystem

./: CMakeLists.txt  Main.qml  SeatButton.qml  SeatSelection.qml  SimpleAirline.cpp  SimpleAirline.h  flighthandler.cpp  flighthandler.h  loginhandler.cpp  loginhandler.h  main.cpp  resources.qrc
